--- a/css/facetview.css
+++ b/css/facetview.css
@@ -1,9 +1,11 @@
-#facetview_freetext {
-  width: 85%;
-  display: block;
-  margin: auto;
+#facetview_freetext{
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
 }
-
+#facetview_filters h3{
+    margin:40px 0 20px 0;
+}
 #facetview_advanced{
     float:left;
     clear:left;
@@ -27,25 +29,12 @@
     -webkit-border-radius: 2px;
     border-radius: 2px;
 }
-.facetview_filtertag{
-    padding:2px 0;
-    font-weight:bold;
-    color:#373737;
-}
 .facetview_filterchoice{
     text-decoration:none;
     color:#373737;
 }
-#facetview_selectedfilters{
-    list-style-type:none;
-    margin:0;
-    padding:0;
-}
 .facetview_filterselected{
-    color:green;
-}
-.facetview_filterhidden{
-    display:none;
+    margin:5px;
 }
 .facetview_freetext_filterdiv{
     float:left;
@@ -55,80 +44,15 @@
     color:green;
     width:100%;
 }
-.facetview_freetextfilter{
-    height:15px;
-    width:130px;
-    padding:0;
-    margin:5px 0 5px 0;
-    background:#fff;
-    border:1px dotted #ddd;
-    color:#888;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-}
 .facetview_advancedshow{
     text-decoration:none;
     color:#a1a1a1;
 }
 
-.facetview_result{
-    color:#373737;
-    border-bottom:1px dotted #373737;
-    padding:5px;
-    margin:5px;
-}
-a.facetview_clear{
-    text-decoration:none;
-    color:red;
-    font-weight:bold;
-    font-size:12px;
-    padding:0 0 0 5px;
-}
-a.facetview_more{
-    font-weight:bold;
-    color:#a1a1a1;
-}
-.facetview_moretabletitle{
-    min-width:100px;
-    text-align:right;
-    vertical-align:text-top;
-    color:#a1a1a1;
-    overflow:hidden;
-}
-.facetview_moreinfo{
-    display:none;
-    font-size:11px;
-}
-.facetview_searchthis{
-    display:none;
-}
-.facetview_raw{
-    padding:5px;
-    margin:5px;
-    background:#eee;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-}
 .facetview_resultactions a{
     color:#353535;
     font-weight:bold;
     text-decoration:none;
     margin:0 5px 0 5px;
-}
-.facetview_green{
-    color:green;
-}
-.facetview_editingbox{
-
-}
-.facetview_hidden{
-    display:none;
-}
-
-td.facetview_fixed{
-    width:340px;
-    overflow:hidden;
 }
 
