added option to facets to show more results, and trigger display if facets not already viewable

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   text-align: center;
 }
 
-/* specific additions for this doc page */
+/* specific additions for the example index page */
 .nav-logo img {
   margin-top: 4px;
 }
