first attempt at enabling AND - OR options. default option is set to false, change to true to try it out. more work will be done on it soon

--- a/css/facetview.css
+++ b/css/facetview.css
@@ -44,7 +44,8 @@
     color:#373737;
 }
 .facetview_filterselected{
-    margin:5px;
+}
+.facetview_facetlogic{
 }
 .facetview_freetext_filterdiv{
     float:left;
