improving layout of embedded facetrange selectors

--- a/css/facetview.css
+++ b/css/facetview.css
@@ -36,6 +36,14 @@
     -webkit-border-radius: 5px;
     border-radius: 5px;
 }
+.facetview_rangecontainer{
+    border:1px solid #ccc; 
+    padding:5px; 
+    margin-bottom:5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
 .node{
     cursor:pointer;
 }
