--- a/css/facetview.css
+++ b/css/facetview.css
@@ -1,3 +1,4 @@
+/*
 #facetview_freetext{
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -75,3 +76,4 @@
     margin:0 5px 0 5px;
 }
 
+*/
