--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,6 @@
-/**********************************************
-  *   Generic Mods to Bootstrap
-  *********************************************/
-
-html, body {
-  background-color: #eee;
-}
-body {
-  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
-}
-
+/**
+ Layout for the test version of FacetView 
+**/
 .content {
-  background-color: #fff;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+	padding-top: 40px;
 }
-
-.page-header {
-  background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
-}
-
-.container > footer p {
-  text-align: center;
-}
-
-/* specific additions for the example index page */
-.nav-logo img {
-  margin-top: 4px;
-}
-
-h4 {
-  line-height: 28px;
-  margin-bottom: 10px;
-}
-
